# rust-crud-api

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  routes.rs  seed.rs  state.rs
src/auth/: jwt.rs
src/config/: mod.rs
src/db/: mod.rs  mysql.rs  user_repository.rs
src/errors/: api_error.rs
src/graphql/: mutation.rs  query.rs  schema.rs
src/handlers/: health.rs  mod.rs  user_handler.rs
src/middleware/: auth.rs
src/migrations/: 20260209165552_create_users.sql  20260209165729_create_departments.sql.sql  20260209165754_create_user_departments.sql  20260209165828_seed_data.sql
src/models/: claims.rs  mod.rs  user.rs
src/security/: jwt.rs
src/services/: auth_service.rs  user_service.rs
